--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/src/MasterChef.Web/MasterChef.db-shm
+/src/MasterChef.Web/MasterChef.db-wal
