--- a/src/MasterChef.Api/Properties/launchSettings.json
+++ b/src/MasterChef.Api/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "MasterChef.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7043;http://localhost:5110",
       "environmentVariables": {
