--- a/src/MasterChef.Api/MasterChef.Api.csproj
+++ b/src/MasterChef.Api/MasterChef.Api.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MasterChef.Application\MasterChef.Application.csproj" />
+    <ProjectReference Include="..\MasterChef.Domain\MasterChef.Domain.csproj" />
     <ProjectReference Include="..\MasterChef.Infra.MySql\MasterChef.Infra.MySql.csproj" />
     <ProjectReference Include="..\MasterChef.Infra.Postgres\MasterChef.Infra.Postgres.csproj" />
     <ProjectReference Include="..\MasterChef.Infra.Sqlite\MasterChef.Infra.Sqlite.csproj" />
