--- a/src/MasterChef.Api/appsettings.json
+++ b/src/MasterChef.Api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DefaultConnectionString": "SqlServer",
+  "DefaultConnectionString": "Sqlite",
   "ConnectionStrings": {
     "Sqlite": "Data Source=MasterChef.db",
     "MySQL": "Server=localhost;Database=MasterChef;Uid=root;Pwd=password;",
