--- a/src/MasterChef.Infra.Postgres/MasterChef.Infra.Postgres.csproj
+++ b/src/MasterChef.Infra.Postgres/MasterChef.Infra.Postgres.csproj
@@ -1,8 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Compile Remove="Migrations\**" />
+      <EmbeddedResource Remove="Migrations\**" />
+      <None Remove="Migrations\**" />
+    </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.1">
@@ -16,10 +22,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MasterChef.Infra\MasterChef.Infra.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Migrations" />
     </ItemGroup>
     
 </Project>
