Atualizando paginas do identity para portugues

--- a/src/MasterChef.Api/appsettings.json
+++ b/src/MasterChef.Api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DefaultConnectionString": "Sqlite",
+  "DefaultConnectionString": "SqlServer",
   "ConnectionStrings": {
     "Sqlite": "Data Source=MasterChef.db",
     "SqlServer": "Data Source=(localdb)\\MSSQLLocalDB;Database=MasterChef;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
