--- a/src/MasterChef.UI/MasterChef.UI.csproj
+++ b/src/MasterChef.UI/MasterChef.UI.csproj
@@ -27,6 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MasterChef.Infra.Sqlite.Identity\MasterChef.Infra.Sqlite.Identity.csproj" />
+    <ProjectReference Include="..\MasterChef.Infra.SqlServer.Identity\MasterChef.Infra.SqlServer.Identity.csproj" />
     <ProjectReference Include="..\MasterChef.Infra\MasterChef.Infra.csproj" />
   </ItemGroup>
 
