--- a/src/MasterChef.Api/MasterChef.Api.csproj
+++ b/src/MasterChef.Api/MasterChef.Api.csproj
@@ -7,6 +7,10 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <DocumentationFile>bin\Debug\MasterChef.Api.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.1">
