--- a/src/MasterChef.UI/appsettings.json
+++ b/src/MasterChef.UI/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "apiUrl": "https://localhost:7043/api",
   "pathImagem": "wwwroot/Img/",
-  "DefaultConnectionString": "SqlServer",
+  "DefaultConnectionString": "Sqlite",
   "ConnectionStrings": {
     "Sqlite": "Data Source=MasterChefIdentity.db",
     "SqlServer": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MasterChef.UI-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
