--- a/src/MasterChef.Api/appsettings.json
+++ b/src/MasterChef.Api/appsettings.json
@@ -11,5 +11,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "filePah": "../MasterChef.UI/wwwroot/Img/"
 }
