--- a/src/MasterChef.Infra.SqlServer/MasterChef.Infra.SqlServer.csproj
+++ b/src/MasterChef.Infra.SqlServer/MasterChef.Infra.SqlServer.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\MasterChef.Infra\MasterChef.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations" />
+  </ItemGroup>
+
 </Project>
