--- a/src/MasterChef.Api/appsettings.json
+++ b/src/MasterChef.Api/appsettings.json
@@ -11,6 +11,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ElasticsearchSettings": {
+    "uri": "http://localhost:9200",
+    "defaultIndex": "apiLogs",
+    "username": "elastic",
+    "password": "pass@123"
+  },
   "AllowedHosts": "*",
   "filePah": "../MasterChef.UI/wwwroot/Img/"
 }
