--- a/src/MasterChef.Authentication/appsettings.json
+++ b/src/MasterChef.Authentication/appsettings.json
@@ -11,5 +11,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ElasticsearchSettings": {
+    "uri": "http://localhost:9200",
+    "defaultIndex": "authenticationLogs",
+    "username": "elastic",
+    "password": "pass@123"
+  },
   "AllowedHosts": "*"
 }
