--- a/src/MasterChef.UI/appsettings.json
+++ b/src/MasterChef.UI/appsettings.json
@@ -5,6 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ElasticsearchSettings": {
+    "uri": "http://localhost:9200",
+    "defaultIndex": "UILogs",
+    "username": "elastic",
+    "password": "pass@123"
+  },
   "AllowedHosts": "*",
   "apiUrl": "https://localhost:7043/api",
   "pathImagem": "wwwroot/Img/",
