--- a/container_files/ElasticStack/docker-compose.yml
+++ b/container_files/ElasticStack/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - discovery.type=single-node
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - bootstrap.memory_lock=true
-      - xpack.security.enabled=true
+      - xpack.security.enabled=false
       - xpack.security.http.ssl.enabled=false
       - xpack.security.transport.ssl.enabled=false
       - xpack.license.self_generated.type=${LICENSE}
@@ -40,7 +40,7 @@ services:
       - SERVERNAME=kibana
       - ELASTICSEARCH_HOSTS=http://es01:9200
       - ELASTICSEARCH_USERNAME=kibana_system
-      - ELASTICSEARCH_PASSWORD=${KIBANA_PASSWORD}
+      - ELASTICSEARCH_PASSWORD=${ELASTIC_PASSWORD}
     mem_limit: ${MEM_LIMIT}
 
   apm:
