--- a/src/MasterChef.Api/appsettings.json
+++ b/src/MasterChef.Api/appsettings.json
@@ -17,6 +17,12 @@
     "username": "elastic",
     "password": "pass@123"
   },
+  "ElasticApm": {
+    "ServerUrls": "http://localhost:8200",
+    "TransactionSampleRate": 1.0,
+    "CaptureBody": "all",
+    "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
+  },
   "AllowedHosts": "*",
   "filePah": "../MasterChef.UI/wwwroot/Img/"
 }
