--- a/container_files/ElasticStack/.env
+++ b/container_files/ElasticStack/.env
@@ -12,7 +12,7 @@ CLUSTER_NAME=docker-cluster
 
 # Set to 'basic' or 'trial' to automatically start the 30-day trial
 LICENSE=basic
-#LICENSE=trial
+#LICENSE=basic
 
 # Port to expose Elasticsearch HTTP API to the host
 ES_PORT=9200
