--- a/container_files/ElasticStack/docker-compose.yml
+++ b/container_files/ElasticStack/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - xpack.security.enabled=false
       - xpack.security.http.ssl.enabled=false
       - xpack.security.transport.ssl.enabled=false
+      - xpack.security.authc.api_key.enabled=true
       - xpack.license.self_generated.type=${LICENSE}
     mem_limit: ${MEM_LIMIT}
     ulimits:
