--- a/src/MasterChef.Authentication/Properties/launchSettings.json
+++ b/src/MasterChef.Authentication/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "MasterChef.Authentication": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7114;http://localhost:5166",
       "environmentVariables": {
