--- a/src/MasterChef.Api/appsettings.json
+++ b/src/MasterChef.Api/appsettings.json
@@ -12,6 +12,7 @@
     }
   },
   "ElasticsearchSettings": {
+    "useElasticSearch" : false,
     "uri": "http://localhost:9200",
     "defaultIndex": "apiLogs",
     "username": "elastic",
