--- a/src/MasterChef.Api/MasterChef.Api.csproj
+++ b/src/MasterChef.Api/MasterChef.Api.csproj
@@ -5,10 +5,15 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <UserSecretsId>50e610eb-85df-4997-9c76-4090a2604406</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DocumentationFile>bin\Debug\MasterChef.Api.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DocumentationFile>bin\Release\MasterChef.Api.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
