--- a/src/MasterChef.Authentication/Dockerfile
+++ b/src/MasterChef.Authentication/Dockerfile
@@ -3,18 +3,26 @@ WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0-focal AS build
+RUN dotnet dev-certs https
 WORKDIR /src
-COPY ["MasterChef.Authentication/MasterChef.Authentication.csproj", "MasterChef.Authentication/"]
-RUN dotnet restore "MasterChef.Authentication/MasterChef.Authentication.csproj"
+COPY ["src/MasterChef.Authentication/MasterChef.Authentication.csproj", "src/MasterChef.Authentication/"]
+COPY ["src/MasterChef.Application/MasterChef.Application.csproj", "src/MasterChef.Application/"]
+COPY ["src/MasterChef.Domain/MasterChef.Domain.csproj", "src/MasterChef.Domain/"]
+COPY ["src/MasterChef.Infra/MasterChef.Infra.csproj", "src/MasterChef.Infra/"]
+COPY ["src/MasterChef.Dto/MasterChef.Dto.csproj", "src/MasterChef.Dto/"]
+COPY ["src/MasterChef.Infra.Sqlite/MasterChef.Infra.Sqlite.csproj", "src/MasterChef.Infra.Sqlite/"]
+COPY ["src/MasterChef.Infra.SqlServer/MasterChef.Infra.SqlServer.csproj", "src/MasterChef.Infra.SqlServer/"]
+RUN dotnet restore "src/MasterChef.Authentication/MasterChef.Authentication.csproj"
 COPY . .
-WORKDIR "/src/MasterChef.Authentication"
+WORKDIR "/src/src/MasterChef.Authentication"
 RUN dotnet build "MasterChef.Authentication.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "MasterChef.Authentication.csproj" -c Release -o /app/publish
+RUN dotnet publish "MasterChef.Authentication.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
+COPY --from=publish /root/.dotnet/corefx/cryptography/x509stores/my/* /root/.dotnet/corefx/cryptography/x509stores/my/
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "MasterChef.Authentication.dll"]
