--- a/src/MasterChef.Api/appsettings.json
+++ b/src/MasterChef.Api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DefaultConnectionString": "SqlServer",
+  "DefaultConnectionString": "Sqlite",
   "ConnectionStrings": {
     "Sqlite": "Data Source=MasterChef.db",
     "SqlServer": "Data Source=(localdb)\\MSSQLLocalDB;Database=MasterChef;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
@@ -25,5 +25,12 @@
     "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
   },
   "AllowedHosts": "*",
-  "filePah": "../MasterChef.UI/wwwroot/Img/"
+  "filePah": "../MasterChef.UI/wwwroot/Img/",
+  "Docker": {
+    "commandName": "Docker",
+    "launchBrowser": true,
+    "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+    "publishAllPorts": false,
+    "useSSL": true
+  }
 }
