--- a/src/MasterChef.Infra.Sqlite/MasterChef.Infra.Sqlite.csproj
+++ b/src/MasterChef.Infra.Sqlite/MasterChef.Infra.Sqlite.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
