--- a/src/MasterChef.UI/appsettings.json
+++ b/src/MasterChef.UI/appsettings.json
@@ -12,12 +12,19 @@
     "password": "pass@123"
   },
   "AllowedHosts": "*",
-  "apiUrl": "https://localhost:7043/api",
+  "apiUrl": "https://localhost:5000/api",
   "pathImagem": "wwwroot/Img/",
   "DefaultConnectionString": "Sqlite",
   "ConnectionStrings": {
     "Sqlite": "Data Source=MasterChefIdentity.db",
     "SqlServer": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MasterChef.UI-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "pathToken" : "https://localhost:7114/api/Token"
+  "pathToken" : "https://localhost:6001/api/Token",
+  "Docker": {
+    "commandName": "Docker",
+    "launchBrowser": true,
+    "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+    "publishAllPorts": false,
+    "useSSL": true
+  }
 }
